syntax = "proto3";

import "backend/resources/v1/platform.proto";
import "backend/resources/v1/user.proto";

package backend.services.v1;

service HelloService {
    rpc Hello (HelloRequest) returns (HelloResponse);
    rpc Bye (ByeRequest) returns (ByeResponse);
}

message HelloRequest {
    int32 id = 1;
    string name = 2;
    backend.resources.v1.Platform platform = 3;
}

message HelloResponse {
    string message = 1;
    backend.resources.v1.User user = 2;
}

message ByeRequest {
    int32 id = 1;
}

message ByeResponse {
    string message = 1;
}
